--- a/patient-form.html
+++ b/patient-form.html
@@ -26,7 +26,7 @@
                 <input type="text" placeholder="Full Name" required>
                 <input type="number" placeholder="Age" required>
                 <select required>
-                    <option value="" >Select Blood Type</option>
+                    <option value="" >Select Blooood Type</option>
                     <option value="A+">A+</option>
                     <option value="A-">A-</option>
                     <option value="B+">B+</option>
